Some alignment issues

--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,8 @@ body {
 #unit { 
     font-size: 16px; 
     color: #333; 
-    margin-bottom: 20px; 
-    text-align: right;
+    margin-bottom: 5px; 
+    text-align: left;
 }
 
 #game-over {
@@ -336,6 +336,13 @@ input:checked + .slider:before {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0px 0;
+}
+
+.unit-container {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
     margin: 0px 0;
 }
 
